// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`app-generator allows a custom repository name 1`] = `
Object {
  "content": "root = true

[*]
indent_style = space
indent_size = 2
charset = utf-8
trim_trailing_whitespace = true
insert_final_newline = true

[*.md]
trim_trailing_whitespace = false
",
  "filePath": "/.editorconfig",
}
`;

exports[`app-generator allows a custom repository name 2`] = `
Object {
  "content": "build/
node_modules/
.yo-rc.json
",
  "filePath": "/.gitignore",
}
`;

exports[`app-generator allows a custom repository name 3`] = `
Object {
  "content": "{}
",
  "filePath": "/.yo-rc.json",
}
`;

exports[`app-generator allows a custom repository name 4`] = `
Object {
  "content": "module.exports = require('generator-liferay-fragments').getBundlerConfig();
",
  "filePath": "/liferay-npm-bundler.config.js",
}
`;

exports[`app-generator allows a custom repository name 5`] = `
Object {
  "content": "{
  \\"name\\": \\"my-nice-custom-project\\",
  \\"description\\": \\"Liferay Fragments project\\",
  \\"version\\": \\"1.0.0\\",

  \\"keywords\\": [
    \\"liferay\\",
    \\"liferay-fragments\\"
  ],

  \\"scripts\\": {
    \\"add-collection\\": \\"yo liferay-fragments:collection\\",
    \\"add-fragment\\": \\"yo liferay-fragments:fragment\\",
    \\"add-fragment-composition\\": \\"yo liferay-fragments:fragment-composition\\",
    \\"add-page-template\\": \\"yo liferay-fragments:page-template\\",
    \\"compress\\": \\"yo liferay-fragments:compress\\",
    \\"export\\": \\"yo liferay-fragments:export\\",
    \\"import\\": \\"yo liferay-fragments:import\\",
    \\"import:watch\\": \\"yo liferay-fragments:import --watch\\",
    \\"preview\\": \\"yo liferay-fragments:preview\\"
  },

  \\"dependencies\\": {
    \\"react\\": \\"16.8.6\\",
    \\"react-dom\\": \\"16.8.6\\"
  },

  \\"devDependencies\\": {
    \\"generator-liferay-fragments\\": \\"1.8.2\\"
  }
}
",
  "filePath": "/package.json",
}
`;

exports[`app-generator allows a custom repository name 6`] = `
Object {
  "content": "# My Nice Custom Project

This project has been created with [generator-liferay-fragments][1]. You can read
how to manage this project in the [generator documentation][2].

> ⚠ Some of the generated fragments might not be compatible with every Liferay
> portal version, please check the [fragment's generator documentation][3] or
> your Liferay documentation to be sure you can use them.

[1]: https://www.npmjs.com/package/generator-liferay-fragments
[2]: https://www.npmjs.com/package/generator-liferay-fragments#usage
[3]: https://www.npmjs.com/package/generator-liferay-fragments#creating-new-fragments
",
  "filePath": "/README.md",
}
`;

exports[`app-generator allows a custom repository name 7`] = `
Object {
  "content": "",
  "filePath": "/src",
}
`;

exports[`app-generator allows a custom repository name 8`] = `
Object {
  "content": "",
  "filePath": "/src/.gitkeep",
}
`;

exports[`app-generator allows adding sample content 1`] = `
Object {
  "content": "root = true

[*]
indent_style = space
indent_size = 2
charset = utf-8
trim_trailing_whitespace = true
insert_final_newline = true

[*.md]
trim_trailing_whitespace = false
",
  "filePath": "/.editorconfig",
}
`;

exports[`app-generator allows adding sample content 2`] = `
Object {
  "content": "build/
node_modules/
.yo-rc.json
",
  "filePath": "/.gitignore",
}
`;

exports[`app-generator allows adding sample content 3`] = `
Object {
  "content": "{}
",
  "filePath": "/.yo-rc.json",
}
`;

exports[`app-generator allows adding sample content 4`] = `
Object {
  "content": "module.exports = require('generator-liferay-fragments').getBundlerConfig();
",
  "filePath": "/liferay-npm-bundler.config.js",
}
`;

exports[`app-generator allows adding sample content 5`] = `
Object {
  "content": "{
  \\"name\\": \\"sample-liferay-fragments\\",
  \\"description\\": \\"Liferay Fragments project\\",
  \\"version\\": \\"1.0.0\\",

  \\"keywords\\": [
    \\"liferay\\",
    \\"liferay-fragments\\"
  ],

  \\"scripts\\": {
    \\"add-collection\\": \\"yo liferay-fragments:collection\\",
    \\"add-fragment\\": \\"yo liferay-fragments:fragment\\",
    \\"add-fragment-composition\\": \\"yo liferay-fragments:fragment-composition\\",
    \\"add-page-template\\": \\"yo liferay-fragments:page-template\\",
    \\"compress\\": \\"yo liferay-fragments:compress\\",
    \\"export\\": \\"yo liferay-fragments:export\\",
    \\"import\\": \\"yo liferay-fragments:import\\",
    \\"import:watch\\": \\"yo liferay-fragments:import --watch\\",
    \\"preview\\": \\"yo liferay-fragments:preview\\"
  },

  \\"dependencies\\": {
    \\"react\\": \\"16.8.6\\",
    \\"react-dom\\": \\"16.8.6\\"
  },

  \\"devDependencies\\": {
    \\"generator-liferay-fragments\\": \\"1.8.2\\"
  }
}
",
  "filePath": "/package.json",
}
`;

exports[`app-generator allows adding sample content 6`] = `
Object {
  "content": "# Sample Liferay Fragments

This project has been created with [generator-liferay-fragments][1]. You can read
how to manage this project in the [generator documentation][2].

> ⚠ Some of the generated fragments might not be compatible with every Liferay
> portal version, please check the [fragment's generator documentation][3] or
> your Liferay documentation to be sure you can use them.

[1]: https://www.npmjs.com/package/generator-liferay-fragments
[2]: https://www.npmjs.com/package/generator-liferay-fragments#usage
[3]: https://www.npmjs.com/package/generator-liferay-fragments#creating-new-fragments
",
  "filePath": "/README.md",
}
`;

exports[`app-generator allows adding sample content 7`] = `
Object {
  "content": "",
  "filePath": "/src",
}
`;

exports[`app-generator allows adding sample content 8`] = `
Object {
  "content": "",
  "filePath": "/src/.gitkeep",
}
`;

exports[`app-generator allows adding sample content 9`] = `
Object {
  "content": "{
  \\"cssPath\\": \\"styles.css\\",
  \\"configurationPath\\": \\"configuration.json\\",
  \\"htmlPath\\": \\"index.html\\",
  \\"jsPath\\": \\"main.js\\",
  \\"name\\": \\"Sample fragment\\",
  \\"type\\": \\"component\\"
}
",
  "filePath": "fragment.json",
}
`;

exports[`app-generator allows adding sample content 10`] = `
Object {
  "content": "<div class=\\"sample-fragment\\">
  <h1>
    <lfr-editable id=\\"title\\" type=\\"text\\">
      Sample fragment
    </lfr-editable>
  </h1>
</div>
",
  "filePath": "index.html",
}
`;

exports[`app-generator allows adding sample content 11`] = `
Object {
  "content": ".sample-fragment {
  color: inherit;
  font-size: 18px;
  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI',
    'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans',
    'Helvetica Neue', sans-serif;
}
",
  "filePath": "styles.css",
}
`;

exports[`app-generator allows adding sample content 12`] = `
Object {
  "content": "console.group('Sample fragment');
console.log('fragmentElement', fragmentElement);
console.log('configuration', configuration);
console.groupEnd();
",
  "filePath": "main.js",
}
`;

exports[`app-generator generates a new project 1`] = `
Object {
  "content": "root = true

[*]
indent_style = space
indent_size = 2
charset = utf-8
trim_trailing_whitespace = true
insert_final_newline = true

[*.md]
trim_trailing_whitespace = false
",
  "filePath": "/.editorconfig",
}
`;

exports[`app-generator generates a new project 2`] = `
Object {
  "content": "build/
node_modules/
.yo-rc.json
",
  "filePath": "/.gitignore",
}
`;

exports[`app-generator generates a new project 3`] = `
Object {
  "content": "{}
",
  "filePath": "/.yo-rc.json",
}
`;

exports[`app-generator generates a new project 4`] = `
Object {
  "content": "module.exports = require('generator-liferay-fragments').getBundlerConfig();
",
  "filePath": "/liferay-npm-bundler.config.js",
}
`;

exports[`app-generator generates a new project 5`] = `
Object {
  "content": "{
  \\"name\\": \\"sample-liferay-fragments\\",
  \\"description\\": \\"Liferay Fragments project\\",
  \\"version\\": \\"1.0.0\\",

  \\"keywords\\": [
    \\"liferay\\",
    \\"liferay-fragments\\"
  ],

  \\"scripts\\": {
    \\"add-collection\\": \\"yo liferay-fragments:collection\\",
    \\"add-fragment\\": \\"yo liferay-fragments:fragment\\",
    \\"add-fragment-composition\\": \\"yo liferay-fragments:fragment-composition\\",
    \\"add-page-template\\": \\"yo liferay-fragments:page-template\\",
    \\"compress\\": \\"yo liferay-fragments:compress\\",
    \\"export\\": \\"yo liferay-fragments:export\\",
    \\"import\\": \\"yo liferay-fragments:import\\",
    \\"import:watch\\": \\"yo liferay-fragments:import --watch\\",
    \\"preview\\": \\"yo liferay-fragments:preview\\"
  },

  \\"dependencies\\": {
    \\"react\\": \\"16.8.6\\",
    \\"react-dom\\": \\"16.8.6\\"
  },

  \\"devDependencies\\": {
    \\"generator-liferay-fragments\\": \\"1.8.2\\"
  }
}
",
  "filePath": "/package.json",
}
`;

exports[`app-generator generates a new project 6`] = `
Object {
  "content": "# Sample Liferay Fragments

This project has been created with [generator-liferay-fragments][1]. You can read
how to manage this project in the [generator documentation][2].

> ⚠ Some of the generated fragments might not be compatible with every Liferay
> portal version, please check the [fragment's generator documentation][3] or
> your Liferay documentation to be sure you can use them.

[1]: https://www.npmjs.com/package/generator-liferay-fragments
[2]: https://www.npmjs.com/package/generator-liferay-fragments#usage
[3]: https://www.npmjs.com/package/generator-liferay-fragments#creating-new-fragments
",
  "filePath": "/README.md",
}
`;

exports[`app-generator generates a new project 7`] = `
Object {
  "content": "",
  "filePath": "/src",
}
`;

exports[`app-generator generates a new project 8`] = `
Object {
  "content": "",
  "filePath": "/src/.gitkeep",
}
`;
